--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	},
 	"scripts": {
 		"build": "babel src --extensions \".js,.ts\" --out-dir dist --copy-files",
-		"dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/server.ts",
+		"dev": "ts-node-dev --inspect --transpile-only --exit-child --ignore-watch node_modules src/server.ts",
 		"start": "node dist/server.js"
 	},
 	"devDependencies": {
